# thundercell

./: README.md
IM/: README.md
exchange/autodiscover/: Cargo.toml  README.md
exchange/autodiscover/src/: main.rs
exchange/ews/: .gitignore  Cargo.toml  README.md
exchange/ews/ews_derive/: Cargo.toml
exchange/ews/ews_derive/src/: lib.rs  xml_attribute.rs  xml_element.rs
exchange/ews/examples/: find_item.rs
exchange/ews/src/: lib.rs  net.rs  types.rs  xml.rs
ispdb-rs/: Cargo.toml  README.md
ispdb-rs/src/: autoconfig.rs  lib.rs
rust-xpcom/http_client/: Cargo.toml  components.conf  http_client.h  moz.build
rust-xpcom/http_client/public/: moz.build  nsIRustHttpClient.idl
rust-xpcom/http_client/src/: lib.rs  stream.rs
