[package]
name = "http_client"
version = "0.1.0"
edition = "2021"

[lib]
name = "http_client"

[dependencies]
mozilla-central-workspace-hack = { version = "0.1", features = ["example_xpcom"], optional = true }
nserror.workspace = true
nsstring.workspace = true
xpcom.workspace = true

cstr = "0.2"
thin-vec = { version = "0.2.1", features = ["gecko-ffi"] }

# Requires full features for ItemTrait
syn = { workspace = true, features = ["full"] }